@@ -2876,7 +2876,80 @@ const ConstantCommandsArray g_commands = {
                   1,
                   INFINITE_COMMAND_ARGS,
                   CommandInfo::Extended,
-                  &CommandsApi::NrThreads)};
+                  &CommandsApi::NrThreads),
+    // bf
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("DEBUG"),
+                  "<key> [options...]",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  1,
+                  INFINITE_COMMAND_ARGS,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfDebug),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("EXISTS"),
+                  "<key> <item>",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  2,
+                  0,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfExists),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("SCANDUMP"),
+                  "<key> <iter>",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  2,
+                  0,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfScanDump),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("ADD"),
+                  "<key> <item>",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  2,
+                  0,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfAdd),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("MEXISTS"),
+                  "<key> <item> [items...]",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  2,
+                  INFINITE_COMMAND_ARGS,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfMexists),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("LOADCHUNK"),
+                  "<key> <iter> <data>",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  3,
+                  0,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfLoadChunk),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("MADD"),
+                  "<key> <item> [items...]",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  2,
+                  INFINITE_COMMAND_ARGS,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfMadd),
+    CommandHolder(REDIS_BLOOM_MODULE_COMMAND("RESERVE"),
+                  "<key> <error_rate> <size>",
+                  UNDEFINED_SUMMARY,
+                  UNDEFINED_SINCE,
+                  UNDEFINED_EXAMPLE_STR,
+                  3,
+                  0,
+                  CommandInfo::Extended,
+                  &CommandsApi::BfReserve)};
 
 const ConstantCommandsArray g_internal_commands = {CommandHolder(REDIS_SEARCH_MODULE_COMMAND("SETPAYLOAD"),
                                                                  UNDEFINED_ARGS,
