@@ -32,6 +32,9 @@
 #define REDIS_NR_MODULE "NR"
 #define REDIS_NR_MODULE_COMMAND(COMMAND) REDIS_MODULE_COMMAND_GENERATE(REDIS_NR_MODULE, COMMAND)
 
+#define REDIS_BLOOM_MODULE "BF"
+#define REDIS_BLOOM_MODULE_COMMAND(COMMAND) REDIS_MODULE_COMMAND_GENERATE(REDIS_BLOOM_MODULE, COMMAND)
+
 namespace fastonosql {
 namespace core {
 namespace redis {}  // namespace redis
