@@ -1,6 +1,7 @@
 1.14.2 /
 [Alexandr Topilski]
 - #80 can't connect using ssh
+- rebloom commands support
 
 1.14.1 / December 21, 2017
 [Alexandr Topilski]
